# workshop-azure-iot

./: .gitignore  404.html  Dockerfile  Makefile  README.md  ai_services.env.template  blob_storage.env.template  compose.yaml  core.env.template  eventgrid.env.template  function_app.py  index.html  iot_hub.env.template  iotedge.Dockerfile  main.py  mkdocs.yml  pyproject.toml
.devcontainer/: devcontainer.json
.github/: CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: docker-release.yaml  docker.yaml  ghcr-release.yaml  test.yaml
configs/alertmanager/: alertmanager.yml
configs/grafana/dashboards/: prometheus-client.json
configs/mosquitto/: tls.conf
configs/prometheus/: prometheus.yml
docs/: index.md
docs/scenarios/: 1_azure_iot_hub_messaging.md  2_azure_event_grid_messaging.md  3_generic_messaging.md  4_azure_iot_edge_messaging.md
scenarios/1_azure_iot_hub_messaging/: index.html
scenarios/2_azure_event_grid_messaging/: index.html
scenarios/3_generic_messaging/: index.html
scenarios/4_azure_iot_edge_messaging/: index.html
scripts/: capture_image.py  create_env_files.sh  deploy_azure_functions_resources.sh  edge.py  event_grid.py  install-iot-edge.sh  prometheus.py  publish_azure_functions.sh  receive_direct_method.py  upload_to_blob.py
search/: search_index.json
tests/: test_ai_services.py  test_blob_storage.py  test_core.py  test_iot.py  utilities.py
workshop_azure_iot/: core.py  utilities.py
workshop_azure_iot/internals/: ai_services.py  blob_storage.py  iot_hub.py
workshop_azure_iot/routers/: ai_services.py  blob_storage.py  core.py  iot_hub.py
workshop_azure_iot/settings/: ai_services.py  blob_storage.py  core.py  iot_hub.py
