[tool.poetry]
name = "workshop-azure-iot"
version = "0.0.1"
description = "A GitHub template repository for Python"
authors = ["ks6088ts <ks6088ts@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
typer = "^0.12.5"
fastapi = {extras = ["standard"], version = "^0.115.2"}
azure-functions = "^1.21.3"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
ruff = "^0.6.9"
pytest = "^8.3.3"
coverage = "^7.6.3"
pytest-cov = "^5.0.0"


[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.5.41"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py310"
select = ["E", "F", "I", "UP"]
ignore = ["D203"]

[tool.pytest.ini_options]
addopts = "-ra --cov"
testpaths = ["tests"]
pythonpath = ['.']

[tool.coverage.report]
show_missing = true
