[tool.poetry]
name = "workshop-azure-iot"
version = "0.0.1"
description = "A GitHub template repository for Python"
authors = ["ks6088ts <ks6088ts@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^1.0.1"
typer = "^0.13.1"
fastapi = {extras = ["standard"], version = "^0.115.4"}
azure-functions = "^1.21.3"
pydantic-settings = "^2.6.1"
azure-iot-device = "^2.14.0"
openai = "^1.55.2"
azure-storage-blob = "^12.23.1"
opencv-python-headless = "^4.10.0.84"
azure-iot-hub = "^2.6.1"
prometheus-client = "^0.21.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.0.1"
ruff = "^0.8.0"
pytest = "^8.3.4"
coverage = "^7.6.4"
pytest-cov = "^6.0.0"


[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.5.44"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = ["D203"]

[tool.pytest.ini_options]
addopts = "-ra --cov"
testpaths = ["tests"]
pythonpath = ['.']

[tool.coverage.report]
show_missing = true
